2020-01-09  Simon Fraser  <simon.fraser@apple.com>

        Add ENABLE_UI_SIDE_COMPOSITING and use it in a few places
        https://bugs.webkit.org/show_bug.cgi?id=205982

        Reviewed by Jon Lee.
        
        Add a #define ENABLE_UI_SIDE_COMPOSITING for Cocoa platforms. Minor comment cleanup, and
        move the duplicate ENABLE_ASYNC_SCROLLING from iOS and macOS sections into the Cocoa section.

        * wtf/FeatureDefines.h:

2020-01-08  Yusuke Suzuki  <ysuzuki@apple.com>

        Reduce binary size by purging C++ type information in Objective-C fields and parameters
        https://bugs.webkit.org/show_bug.cgi?id=205905

        Reviewed by Saam Barati.

        Objective-C has reflection mechanisms. This means that fields, methods, and their types
        need to hold its string representations in binary even if we are using release build.
        While typical Objective-C class does not have large size of type names, C++ struct / class
        has very large one, and putting them in Objective-C method names, parameter types, or fields
        makes binary size very large.

        Interesting thing is that type information is gathered when parameter is a C++ pointer, reference,
        or value. And it gathers one-level deep information from this pointer etc. This means that, if
        we use RefPtr<T>, collected type information is the one of RefPtr, not one of T. So it becomes significantly
        smaller.

        This patch introduces NakedRef<T>. This is similar to Ref while it does not have any ownership. So it
        is just a wrapper around T&. We already have NakedPtr<T>. And use NakedRef<T> / NakedPtr<T> instead
        of T& and T* if,

            1. T is C++ class.
            2. T* / T& is in Objective-C fields or parameter types (including a return type).

        Then, these type information is one of NakedRef<T> / NakedPtr<T> instead of T, and we can reduce binary size.

        This patch saves 600~KB in binary size.
