@@ -1,3 +1,13 @@
+2020-01-09  Tim Horton  <timothy_horton@apple.com>
+
+        Adopt TARGET_OS_MACCATALYST in more places
+        https://bugs.webkit.org/show_bug.cgi?id=206040
+        <rdar://problem/57127108>
+
+        Reviewed by Simon Fraser.
+
+        * Misc/WebDownload.h:
+
 2020-01-08  Yusuke Suzuki  <ysuzuki@apple.com>
 
         Reduce binary size by purging C++ type information in Objective-C fields and parameters
